# dennispham.me

./: .dockerignore  .flake8  .gitignore  Dockerfile  Pipfile  README.md  astro.config.mjs  docker-bake.hcl  docker-compose.yml  eslint.config.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  prek.toml
.github/workflows/: build.yaml  ci.yml  deploy.yaml
portfolio/: __init__.py  admin.py  apps.py  models.py  signals.py  urls.py  utils.py  views.py
portfolio/migrations/: 0001_initial.py  0002_auto_20200617_2308.py  0003_auto_20200617_2329.py  0004_remove_repositorymetadata_watchers.py  0005_auto_20200618_0140.py
portfolio_backend/: Cargo.toml  Dockerfile
portfolio_backend/migrations/2020-12-28-232447_create_repository/: up.sql
portfolio_backend/migrations/2020-12-29-043714_add_last_updated/: down.sql  up.sql
portfolio_backend/migrations/2021-01-21-131033_create_auth/: down.sql  up.sql
portfolio_backend/src/: auth.rs  config.rs  lib.rs  main.rs  schema.rs
portfolio_backend/src/models/: login_history.rs  mod.rs  repository.rs  response.rs  user.rs
portfolio_backend/src/routes/: auth.rs  mod.rs  repository.rs
portfolio_frontend/: .eslintcache  Dockerfile  nginx.conf  package.json
portfolio_frontend/public/: index.html
portfolio_frontend/src/: App.tsx  api.ts  api.tsx  constants.ts  heading.css  helpers.ts  index.css  index.tsx  react-app-env.d.ts  types.ts
portfolio_site/: asgi.py  settings.py  urls.py  wsgi.py
public/.well-known/: pgp-key.txt
public/rss/: styles.xsl
scripts/: Dockerfile  uwsgi.ini
scripts/nginx/: Dockerfile  nginx.conf
src/: content.config.ts
src/components/: CopyCodeButton.astro  Footer.astro  GitHubIcon.astro  GuitarPlayer.astro  Head.astro  Header.astro  PageHeader.astro  PhotoCard.astro  PhotoGrid.astro  PostCard.astro  ProjectCard.astro  RelatedPosts.astro  (+3 more)
(+67 files in other folders)
