[package]
name = "portfolio_backend"
version = "0.1.0"
authors = ["Den4200 <dennis@dennispham.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bcrypt = "0.9.0"
chrono = { version = "0.4", features = ["serde"] }
diesel = { version = "1.4.6", features = ["chrono", "postgres"] }
diesel_migrations = { version = "1.4.0", features = ["postgres"] }
dotenv = "0.15"
futures = "0.3"
hubcaps = "0.6"
jsonwebtoken = "7.2.0"
lazy_static = "1.4.0"
rocket = { version = "0.4.7", default-features = false }
rocket_cors = { version = "0.5.2", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = "0.3.7"
uuid = { version = "0.8", features = ["v4"] }

[dependencies.rocket_contrib]
version = "0.4.7"
default-features = false
features = ["json", "diesel_postgres_pool"]
